# vis-lang

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  d.bat  icon.rc  main.cpp
.github/workflows/: ci-cd.yml
PCBuild/: debug-initial.cmake  release-initial.cmake
PCBuild/Linux/Debug/: b.sh  br.sh  bt.sh  g.sh  r.sh  t.sh
PCBuild/Linux/Release/: b.sh  g.sh  r.sh  t.sh
PCBuild/Windows/MinGW/Debug/: b.bat  bt.bat  g.bat  gb.bat  r.bat  t.bat
PCBuild/Windows/MinGW/Release/: b.bat  g.bat  r.bat  t.bat
PCBuild/Windows/VC17/: g.bat
docs/: Doxyfile
src/: constants.hpp
src/cores/event_system/: design.txt  event_system.hpp
src/cores/event_system/__tests__/: event_system_test.cpp
src/datatypes/: allow_types.hpp  array.cpp  array.hpp  color.hpp  common.hpp  datatypes.hpp  date_time.cpp  date_time.hpp  dictionary.cpp  dictionary.hpp  json.cpp  json.hpp  memory.hpp  object.cpp  object.hpp  path.cpp  path.hpp  string.cpp  string.hpp
src/datatypes/__tests__/: test_array.cpp  test_date_time.cpp  test_dictionary.cpp  test_json.cpp  test_path.cpp  test_string.cpp
src/macros/: singleton.hpp
src/modules/: modules.hpp
src/modules/__tests__/: test_log.cpp
src/modules/log/: LogHandler.cpp  LogHandler.hpp  console_handler.cpp  console_handler.hpp  log.cpp  log.hpp  log_handler.cpp  log_handler.hpp  log_message.hpp
src/modules/log/__tests__/: test_log.cpp
src/utilities/: format_string.cpp  format_string.hpp  path.hpp  utilities.hpp
src/utilities/__tests__/: format_string_test.cpp
vendors/: CMakeLists.txt
vendors/stb_image/: CMakeLists.txt
